<resources>
    <string name="app_name">Bione</string>
    <string name="facebook_app_id">745276993059501</string>
    <string name="fb_login_protocol_scheme">fb745276993059501</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="log_fcm_message_id">"FCM Message Id: "</string>
    <string name="log_fcm_notification_message">"FCM Notification Message: "</string>
    <string name="log_fcm_data">"FCM Data: "</string>
    <string name="log_fcm_data_message">"FCM Data Message: "</string>
    <string name="notification_channel_default">Notifications</string>
    <string name="notification_channel_description_default">Latest Updates</string>
    <string name="error_unexpected_error">Something went wrong.</string>
    <string name="error_bad_connection_try_again">Bad connectivity.</string>
    <string name="error_remote_server_failed">Application server could not respond.</string>
    <string name="error_paring">Parsing error</string>
    <string name="error_internet_not_connected">Please check your internet connection.</string>
    <string name="error_device_rooted">This device is rooted. We are not responsible for any kind of data loss and hack. Use it at your own risk!!</string>
    <string name="error_fb_login_failed">Facebook Login failed!!</string>
    <string name="error_session_expired">Session expired.</string>
    <string name="error_not_a_valid_image_file">File is not a valid image.</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_camera">Camera</string>
    <string name="text_setting">Settings</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_multiple">Multiple</string>
    <string name="text_choose_image">Choose Image</string>
    <string name="permission_camera_storage_msg">Permissions are required for camera &amp; storage.</string>
    <string name="permission_camera_storage_denied_msg">Permissions denied. Please grant permission for camera &amp; storage in setting.</string>
    <string name="text_retry">Retry</string>
    <string name="text_exit">Exit</string>
    <string name="text_ok">Ok</string>
    <string name="text_proceed">Proceed</string>
    <string name="text_loading">Loading…</string>
    <string name="text_back">Back</string>
    <string name="text_home_microbiome">Microbiome</string>
    <string name="text_continue">Continue</string>
    <string name="text_home_genetics">Genetics</string>
    <string name="text_home_food_nutrition"><![CDATA[Food & Nutrition]]></string>
    <string name="text_home_fitness">Fitness</string>
    <string name="text_home_counsellor">Counsellor</string>
    <string name="text_home_contact_us">Contact Us</string>
    <string name="text_home_coming_soon">Coming Soon</string>
    <string name="text_schedule_counselling">Schedule Counselling</string>
    <string name="text_select_date">Select Date</string>
    <string name="text_submit">Submit</string>
    <string name="text_schedule_now">Schedule Now</string>
    <string name="text_show_available_slots">Show Available \nSlots</string>
    <string name="top_contact_us_if_you_need_our_help_have_questions_about_how_to_use_the_platform_or_are_experiencing_technical_difficulties_please_do_not_hesitate_to_contact_us">If you need our help, have questions about how to use the platform or are experiencing technical difficulties, please do not hesitate to contact us.</string>
    <string name="bottom_contact_us_by_submitting_this_form_you_agree_to_our_terms_and_conditions_and_our_privacy_policy_which_explains_how_we_may_collect_use_and_disclose_your_personal_information_including_to_third_parties">By submitting this form you agree to our terms and conditions and our Privacy Policy which explains how we may collect, use and disclose your personal information including to third parties.</string>
    <string name="text_home_food_amp_nnutrition"><![CDATA[Food & \nNutrition]]></string>
    <string name="text_home_reports">MyReport</string>
    <string name="text_home_genomic_counselling">Genomic\nCounselling</string>
    <string name="text_home_my_smart_diet">MySmart\nDiet</string>
    <string name="text_home_my_cool_fitness">MyCool\nFitness</string>
    <string name="error_name">Please enter name</string>
    <string name="error_firstname">Please enter first name</string>
    <string name="error_lastname">Please enter last name</string>
    <string name="error_message">Please enter some message</string>
    <string name="error_mobile">Please enter valid number</string>
    <string name="error_email">Please enter valid email id</string>
    <string name="error_select_time_slot">Please select time slot</string>
    <string name="otp_sent_to_d_change_number">OTP sent to %1$s Change Number?</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="error_logout">Are you sure you want to logout?</string>
    <string name="text_yes">YES</string>
    <string name="text_no">NO</string>
    <string name="nav_profile">My Profile</string>
    <string name="nav_dashboard">My Dashboard</string>
    <string name="nav_orders">My Orders</string>
    <string name="nav_mysessions">MySessions</string>
    <string name="nav_chat">Chat with us</string>
    <string name="nav_logout">Log out</string>
    <string name="nav_faq">FAQ\'s</string>
    <string name="nav_receipt">Payment Receipt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_terms_conditions">Terms &amp; Conditions</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
    <string name="nav_faq_support">Faq &amp; Support</string>
    <string-array name="nav_item_activity_titles">
        <item>My Dashboard</item>
        <item>My Orders</item>
        <item>My Profile</item>
        <item>Payment Receipt</item>
        <item>Chat with us</item>
        <item>My Session</item>
        <item>FAQ\'s</item>

    </string-array>
    <string-array name="payment_modes">
        <item>Payment Mode</item>
        <item>Cash</item>
        <item>Cheque</item>
        <item>Bank Transfer</item>
        <item>Wallet Payment</item>
    </string-array>
    <string name="splash_text">We are <b>Asia\'s 1st</b> direct-to-consumer \nmicrobiome and genetic testing organisation</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="login_with_email">Login with <b>Email</b></string>
    <string name="login_with_mobile">Login with <b>Mobile</b></string>
    <string name="i_would_like_to_receive_news_and_promotion_email_from_bione">I would like to receive news and promotion email from <b>Bione</b></string>
    <string name="i_have_read_and_agree_to_the_terms_of_services">I have read and agree to the <b>Terms of Services*</b></string>
    <string name="i_have_read_and_agree_to_the_privacy_statement">I have read and agree to the <b>Privacy Statement*</b></string>
    <string name="know_more"><u>Know More</u></string>
    <string name="research_consent">
        <![CDATA[
        Bione aims to make and support scientific discoveries in the area of Genetic and Gut Microbiome for human health and welfare. Some of these discoveries will be published in scientific journals to spread the scientific knowledge at global level for the benefit of humankind. We invite you to take part in this project, which we call Bione MyMicroBiome and Genetic Research Study and to participate you must agree to the research consent described below:
        <br /><br />Your personal information will not be used for research and your MyMicrobiome &amp; Genetic data will be de-identified
        <br /><br />Your de-identified MyMicroBiome and Genetic data and any other personal information provided by you may be analyzed in the research.
        <br /><br />Bione researchers who conduct analyses will have access to your de-identified MyMicrobiome and Genetic data.
        <br /><br />Your leftover sample can also be used in study and will be securely stored until study will be completed. Study data generated by Bione will be kept indefinitely in a secured cloud server. Bione privacy statement outlines no one gets access to the personal information of Bione customers.
        <br /><br />Bione MyMicroBiome and Genetic Research Study is non-commercial and sometime in the future you or your family and as well as society may benefit indirectly from research discoveries made by Bione.
        <br /><br />The decision to participate in this study is voluntary
        <br /><br />If Yes, it indicates that you have decided to allow your de-identified sample and data in Bione MyMicroBiome and Genetic Research Study
        <br /><br />If No, it indicates that you have decided to opt out yourself from voluntary participation in scientific research in such case your leftover sample and de-identified data will not be used for the Bione MyMicroBiome and Genetic Research Study.
        ]]>
    </string>
    <string name="text_i_accept_resgister_kit"><![CDATA[I hereby declare that from the past 14 days (from date of saliva sample collection), I am not suffering from symptoms (Fever, cough, shortness of breath, breathing difficulties & pneumonia) which can be related to coronavirus infection.]]></string>
    <string name="error_barcode">The enter barcode is invalid. Please enter a valid code.Need help call Bione customer support number +91 63667 54050</string>
    <string name="longifit_description">
        <![CDATA[
        Bione’s LongiFIT is designed to help you achieve your true fitness goals and make them truly personal by knowing what impacts your body, backed by science.
         <br /><br />A DNA test that can be taken in the comfort of your home can reveal gene mutations which can increase your risk for diseases like diabetes, obesity, Alzheimer’s and cardiovascular conditions. Based on the report and free counselling sessions with our experts, you can make smarter lifestyle choices to prevent such diseases and achieve optimal health.

         <br /><br />DNA test – Scans 175+ functionally important genes
         <br /><br />100+ parameters reported across 15 categories
         <br /><br />Plan to get the best out of your workouts
         <br /><br />One-to-one consultation with experienced counselors
        ]]>
    </string>
    <string name="getfit">
         <![CDATA[
        <br /><br />Fighting obesity? Get personalized fitness recommendations based on your DNA for you
        <br /><br />Change your eating habits and improve your endurance by assessing 100+ parameters
        <br /><br />Know the probability of major diseases affecting you early to prevent them
        <br /><br />Improve your overall lifestyle and optimize your life by using insights backed by science
    ]]>
    </string>
</resources>